--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Yelp Fusion</string>
+
+    <!-- Business Feature -->
+    <string name="business_img_accessibility_msg">Image for %s</string>
 </resources>
