added search view to toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <!-- Business Feature -->
     <string name="business_img_accessibility_msg">Image for %s</string>
+    <string name="search">Search&#8320;</string>
 </resources>
